--- a/src/screens/home/components/projectSection/ProjectSection.css
+++ b/src/screens/home/components/projectSection/ProjectSection.css
@@ -52,17 +52,22 @@
   }
 
   .badge-unselected {
-    background-color: #007bff !important;
+    background-color: #1A1A1A !important;
     color: white !important;
   }
   
   .badge-selected {
     background-color: white !important;
-    color: #007bff !important;
+    color: #1A1A1A !important;
     border: 1px solid #007bff !important;
   }
 
   .input-group {
     max-width: 500px;
     width: 100%;
+  }
+
+  .projectSection-subtitle{
+    color:#B0B0B0;
+    width: 60%;
   }
